--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "gestionrecette",
-  "private": true,
-  "version": "0.0.0",
+  "name": "gestion-recipes-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "jasmine",
+    "start": "nodemon ./src/app.js",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write ."
   },
+  "author": "Mangassouba",
+  "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
-    "pinia": "^2.2.2",
-    "vue": "^3.4.37",
-    "vue-i18n": "^9.14.1",
-    "vue-router": "^4.4.3"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-validator": "^7.2.0",
+    "http-status-codes": "^2.3.0",
+    "mysql2": "^3.11.2",
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
+    "@eslint/js": "^9.11.1",
+    "@types/jest": "^29.5.13",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jasmine": "^4.2.2",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
+    "jasmine": "^5.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5"
   }
 }
