--- a/.env.exemple
+++ b/.env.exemple
@@ -2,3 +2,11 @@ DB_HOST=localhost
 DB_USER=USER
 DB_PASSWORD=PASSWORD
 DB_NAME=NAME_DB
+DB_PORT=PORT
+WFC=true
+CL=10
+QL=0
+
+MYSQL_ROOT_USER=USER
+MYSQL_ROOT_PASSWORD=PASSWORD
+MYSQL_DATABASE=NAME_DB
